--- a/www/pages/doc/changes/v1.4.md
+++ b/www/pages/doc/changes/v1.4.md
@@ -1,18 +1,18 @@
-====== CHANGES v1.4 ======
+# CHANGES v1.4
 
-  * std : added a SO_REUSEADDR before socket_bind (except windows)
-  * nekoc/nekovm : allowed more than 127 filenames in debug infos
-  * nekotools server : added -rewrite for mod_rewrite'style urls
-  * added zlib wrapper
-  * mod_neko for apache 2.0
-  * added sqlite wrapper
-  * std : fixed socket_set_timeout (changed unit from millisec to seconds)
-  * std : fixed math_pow (integer overflow) , fixed readdir (missing closedir on Linux)
-  * added PPC registers
-  * neko.h : added NEKO_* OS/CPU flags
-  * added JIT for x86
-  * vm : (int mod 0) is now an exception (and not NaN)
-  * neko.h : added kind_import and kind_export to share abstracts between libraries
-  * std : handle signals in socket send and recv
-  * allowed OSX universal build
-  * added $setresolver for unknown object field handling
+- std : added a SO_REUSEADDR before socket_bind (except windows)
+- nekoc/nekovm : allowed more than 127 filenames in debug infos
+- nekotools server : added -rewrite for mod_rewrite'style urls
+- added zlib wrapper
+- mod_neko for apache 2.0
+- added sqlite wrapper
+- std : fixed socket_set_timeout (changed unit from millisec to seconds)
+- std : fixed math_pow (integer overflow) , fixed readdir (missing closedir on Linux)
+- added PPC registers
+- neko.h : added NEKO_* OS/CPU flags
+- added JIT for x86
+- vm : (int mod 0) is now an exception (and not NaN)
+- neko.h : added kind_import and kind_export to share abstracts between libraries
+- std : handle signals in socket send and recv
+- allowed OSX universal build
+- added $setresolver for unknown object field handling
